vpc.tf
provider "aws" {
  region = "ap-south-1"
}

resource "aws_vpc" "webapplication" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "webapplication"
  }
}
